fix: wrap property key if it's long

--- a/src/main/frontend/components/property.css
+++ b/src/main/frontend/components/property.css
@@ -77,7 +77,6 @@
     }
 
     .property-key a {
-        @apply whitespace-nowrap;
         color: var(--ls-primary-text-color);
     }
 
